--- a/analysis/DEstrategyRobustness.Rmd
+++ b/analysis/DEstrategyRobustness.Rmd
@@ -9,23 +9,30 @@ Test to what extent our DE strategy is robust. I.e. Using all "supergene" expres
 
 In some species, i.e. StLa and NaSt there are only a single sample for D0 and D1, so that the short term cold reponse effect is based on the difference between two samples with no replicates. This is deemed insufficient to determine statistically significant DE. MeNu1 on the other hand has plenty of replicates and would be deemed to be sufficient.
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, dev = 'svg')
+```
+
 
 ```{r loadLibraries, echo=FALSE, message=FALSE}
 library(DESeq2)
-library(BiocParallel)
-library(gplots)
+# library(BiocParallel)
+# library(gplots)
+library(tidyverse)
+library(plotly)
+library(ape) # plot.phylo
+library(phangorn) # NJ
 
-BPparam <- MulticoreParam(workers = 20)
+# BPparam <- MulticoreParam(workers = 20)
 ```
 
 ```{r loadData, echo=FALSE}
-orthoPath <- "/mnt/NOBACKUP/mariansc/share/orthos"
-
 expr <- readRDS("~/GRewd/pipeline/data/superExprMatrix.RDS") # from superGeneModel.Rmd
+vst <- readRDS("~/GRewd/pipeline/data/VSTnew.RDS")
 
 ```
 
-```{r calcNewDE, echo=FALSE}
+```{r colDataAndNormalize }
 spcs <- c("BrDi","HoVu","MeNu1","StLa","NaSt")
 spcs <- setNames(spcs,spcs)
 
@@ -42,76 +49,71 @@ dds <- DESeqDataSetFromMatrix(countData = round(expr),
                               colData = colData,
                               design = formula(~ sf ))
   
-dds <- DESeq(dds,parallel = T,BPPARAM = BPparam)
+# dds <- DESeq(dds,parallel = T,BPPARAM = BPparam)
 
-ddsFull <- dds
+# just need to normalize
+dds <- estimateSizeFactors(dds)
 ```
 
+### Same variance across species and timepoints
+
+To compare the replicate variance I used the individual samples for which there are triplicates in a selection of species and timepoints. For each gene the variance of the log transformed normalized read-count is calculated over the three (or four) replicates. For each pair of time/spc sample points with replicates, the spearman correlation between the variances are calculated using the around 3000 genes that are highly expressed in both samples points (log2(mean(normCount)) > 8). Need to use the highly expressed genes as the variance correlates strongly with the mean at low expression levels, while at high expression levels the variance is dominated by the biological variance.
+
+The plot shows the resulting spearman coefficients divided into comparisons within species, within same time point, or both different timepoint and species. There is no observable difference when comparing within species or within time point, but seemingly lower correlation when both species and time point are different.
+
+Apparently the variance is neither the same within species nor between species, but both factors have about the same effect. Therefore it makes as much same to assume common variance accross species as it does to assume common variance between timepoints. 
+
 ```{r}
-includeSamplesT4 <- colData$mix=="ind" & colData$timePoint =="T4"
-includeSamplesMn <- colData$mix=="ind" & colData$spc =="MeNu1"
 
+# get individual samples
+x <- counts(dds,normalized = T)[ ,colData$mix=="ind"]
 
-x <- counts(ddsFull,normalized = T)[ ,includeSamplesT4]
+# get spc+timepoint factor
+spcT <- sub("(.*)\\.(ind|mix)..","\\1",colnames(x))
 
-do.call(cbind,tapply(colnames(x),colData$spc[includeSamplesT4,drop=T],function(cols){
+table(spcT)
+
+# means for each spc+timepoint
+do.call(cbind,tapply(colnames(x),spcT,function(cols){
   log2(apply(x[,cols],1,mean))
-})) -> meansT4
+})) -> means
 
-do.call(cbind,tapply(colnames(x),colData$spc[includeSamplesT4,drop=T],function(cols){
+# vars for each spc+timepoint
+do.call(cbind,tapply(colnames(x),spcT,function(cols){
   apply(log2(x[,cols]),1,var)
-})) -> varsT4
+})) -> vars
 
-x <- counts(ddsFull,normalized = T)[ ,includeSamplesMn]
+minMeans <- 8
 
-do.call(cbind,tapply(colnames(x),colData$timePoint[includeSamplesMn,drop=T],function(cols){
-  log2(apply(x[,cols],1,mean))
-})) -> meansMn
+sapply(colnames(vars),function(i1){
+  sapply(colnames(vars),function(i2){
+    # only include highly expressed and remove missing
+    idx <- !is.na(vars[ ,i1]) & !is.nan(vars[ ,i1]) & means[ ,i1] > minMeans &
+       !is.na(vars[ ,i2]) & !is.nan(vars[ ,i2]) & means[ ,i2] > minMeans
 
-do.call(cbind,tapply(colnames(x),colData$timePoint[includeSamplesMn,drop=T],function(cols){
-  apply(log2(x[,cols]),1,var)
-})) -> varsMn
-
-
-idx <- sample(1:8633,50)
-cor.test(vars$HoVu[idx],vars$MeNu1[idx],method = "spearman")
-cor.test(means$HoVu[idx],means$MeNu1[idx],method = "spearman")
-plot(rank(vars$HoVu[idx]),rank(vars$MeNu1[idx]))
-
-
-mapply(function(vars,means){
-  sapply(colnames(vars),function(i1){
-    sapply(colnames(vars),function(i2){
-      idx <- !is.na(vars[ ,i1]) & !is.nan(vars[ ,i1]) & vars[ ,i1] < 5 & means[ ,i1] > 7 &
-         !is.na(vars[ ,i2]) & !is.nan(vars[ ,i2]) & vars[ ,i2] < 5 & means[ ,i2] > 7
-      
-      cor(vars[idx, i1],vars[idx, i2],method = "spearman")
-    })
+    cor(vars[idx, i1],vars[idx, i2],method = "spearman")
   })
-}, vars=list(varsMn,varsT4), means=list(meansMn,meansT4))
+}) -> varCor
+# diag(varCor) <- NA
+# heatmap(varCor)
 
-idx <- !is.na(vars[ ,i1]) & !is.nan(vars[ ,i1]) & vars[ ,i1] < 5 & means[ ,i1] > 7 &
-       !is.na(vars[ ,i2]) & !is.nan(vars[ ,i2]) & vars[ ,i2] < 5 & means[ ,i2] > 7
+as_data_frame(varCor) %>% 
+  mutate( spcT1=rownames(varCor)) %>% 
+  gather( key="spcT2",value = "varCor", -spcT1) %>% 
+  filter( spcT1 < spcT2  ) %>% 
+  mutate( sameSpc = sub("(.*)\\.(.*)","\\1",spcT1) == sub("(.*)\\.(.*)","\\1",spcT2),
+          sameT = sub("(.*)\\.(.*)","\\2",spcT1) == sub("(.*)\\.(.*)","\\2",spcT2),
+          isSame = as.factor(ifelse(sameT,"TimePoint",ifelse(sameSpc,"Species","Neither"))),
+          compared = paste(spcT1,spcT2)) %>% 
+  ggplot( aes( y=varCor, x = isSame, label=compared)) + geom_boxplot() + geom_point() -> p
 
 
-cor(vars[idx, i1],vars[idx, i2],method = "spearman")
+ggplotly(p)
 
-
-ggplot(data.frame(means=means$HoVu[idx],vars=log2(vars$HoVu[idx])),aes(x=vars)) + 
-  geom_density()
-
-cor(vars[[spc1]][idx],vars[[spc2]][idx],method = "spearman")
-
-ggplot(data.frame(varNs=log2(vars$NaSt[idx]),varHv=log2(vars$HoVu[idx])),aes(x=varNs,y=varHv)) + 
-  geom_point() + geom_density2d()
-
-mean(log2(vars$HoVu[idx]))
-rnorm()
-# do 
 ```
 
 
-```{r}
+```{r eval=FALSE}
 # exclude the MeNu1 peak samples that are not pooled
 excludeSamples <- colData$sf %in% c("MeNu1peak0","MeNu1peak1") & colData$mix=="ind"
 
@@ -125,7 +127,7 @@ ddsMeNuPooled <- dds
 ```
 
 
-```{r}
+```{r eval=FALSE}
 # exclude all but a single of the MeNu1 peak samples that are not pooled
 
 lapply(1:3, function(i){
@@ -144,7 +146,7 @@ lapply(1:3, function(i){
 ```
 
 
-```{r}
+```{r eval=FALSE}
 includeSamples <- colData$sf %in% c("MeNu1peak0","MeNu1peak1") & colData$mix=="ind"
 
 dds <- DESeqDataSetFromMatrix(countData = round(expr[ ,includeSamples]),
@@ -159,7 +161,7 @@ ddsMeNuSimple <- dds
 
 ```
 
-```{r}
+```{r eval=FALSE}
 # collect results
 
 # short term all species
@@ -182,17 +184,17 @@ resMeNu$full <- resFull$MeNu1
 
 ```
 
-```{r}
+```{r eval=FALSE}
 sigSTI <- lapply(resFull, with, { ifelse(is.na(padj), F, padj < 0.05 & log2FoldChange > 1) })
 sigSTIMeNu <- lapply(resMeNu, with, { ifelse(is.na(padj), F, padj < 0.05 & log2FoldChange > 1) })
 
 ```
 
-```{r}
+```{r eval=FALSE}
 venn(lapply(sigSTI,which))
 ```
 
-```{r}
+```{r eval=FALSE}
 
 plotOverlap(sigSTIMeNu[-6],FUN = oddsRatioZ,xlab = "Z-score")
 plotOverlap(sigSTI,FUN = oddsRatio,xlab = "odds ratio")
@@ -203,7 +205,7 @@ plotOverlap(c(sigSTIMeNu[-6],sigSTI[-3]),FUN = oddsRatioZ,xlab = "Z-score")
 ```
 
 
-```{r}
+```{r eval=FALSE}
 myOuter <- function(X,Y=X,FUN){
   apply(X,2,function(x){
     apply(Y,2,function(y){
@@ -331,7 +333,7 @@ includeSamples <-
   .$spcT %in% hasTbl$spcT
 
 
-x <- counts(ddsFull,normalized=T)[,includeSamples]
+x <- counts(dds,normalized=T)[,includeSamples]
 
 
 tapply(colnames(x),sub("(.*)\\.(mix|ind)..","\\1",colnames(x)),function(sampleID){
@@ -358,8 +360,7 @@ Large points indicate pooled samples. In the first plot the pooled samples tend 
 All in all it seems that average of individual replicates makes them closer to the pooled samples in most cases, indicating that the pooled samples has less of the within species variance.
 
 ```{r sampleTree}
-library(ape) # plot.phylo
-library(phangorn) # NJ
+
 
 # Species names to show in plots
 spcID2spcName <- c( BrDi="B. distachyon", HoVu="H. vulgare", MeNu1="M. nutans",
@@ -372,7 +373,6 @@ spcColors <- c( NaSt = "#0049dbff",
                 BrDi = "#00c500ff",
                 HoVu = "#ff7e00ff")
 
-vst <- readRDS("~/GRewd/pipeline/data/VSTnew.RDS")
 
 sampleDesc <- read.table(text=colnames(vst),sep=".",col.names=c("spc","timepoint","pooled","rep"))
 sampleDesc$spcColor <- spcColors[spcID2spcName[sampleDesc$spc]]
